@@ -76,7 +76,7 @@ public:
 	char	display[MAX_DISPLAY_SIZE];
 	char	remote[MAX_USERID_SIZE];
 	enum {OFFLINE = 0, IDLE, BUSY, AWAY, DND} status;
-	enum {EXPIRED = 0, USER, GATEWAY, SERVICE, REJECT, REFER, TEMPORARY, REGISTRATION} type;
+	enum {EXPIRED = 0, USER, GATEWAY, SERVICE, REJECT, REFER, TEMPORARY, EXTERNAL} type;
 	bool hidden;
 	int rid;					// registry remap or peer id 
 	unsigned ext;				// 0 or extnum
